# Unicorn-Bot

./: Bot.cpp  Bot.h  CMakeLists.txt  Commands.h  DataTransferObjects.h  Dispatcher.cpp  Dispatcher.h  README.md  main.cpp  sqlScript.sql
